--- a/composer.json
+++ b/composer.json
@@ -5,11 +5,19 @@
     "license": "proprietary",
     "require": {
         "php": ">=7.4",
-        "spryker/kernel": "^3.30.0"
+        "spryker-demo/customer-representative": "*",
+        "spryker/company-gui-extension": "^1.0.0",
+        "spryker/kernel": "^3.30.0",
+        "spryker/symfony": "^3.11.1"
     },
     "require-dev": {
-        "spryker/code-sniffer": "*",
-        "spryker/testify": "*"
+        "spryker/code-sniffer": "^0.17.18",
+        "spryker/company": "^1.5.0",
+        "spryker/gui": "^3.47.1"
+    },
+    "suggest": {
+        "spryker/company": "^1.5.0",
+        "spryker/gui": "^3.47.1"
     },
     "autoload": {
         "psr-4": {
