--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,7 @@
     },
     "require-dev": {
         "spryker/code-sniffer": "^0.17.18",
-        "spryker/company": "^1.5.0",
-        "spryker/gui": "^3.47.1"
+        "spryker/company": "^1.5.0"
     },
     "suggest": {
         "spryker/company": "^1.5.0",
